--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "downshift": "^3.2.6",
     "eslint": "5.12.0",
     "eslint-config-react-app": "^3.0.7",
     "eslint-loader": "2.1.1",
@@ -37,6 +38,8 @@
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
+    "jss": "^9.7.0",
+    "lodash.deburr": "^4.1.0",
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -72,6 +75,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/lodash": "^4.14.121",
     "react-dom": "^16.8.2",
     "typescript": "^3.3.3"
   }
